objects/Vendor_Services__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Per_Service__c</fullName>
        <label>Cost Per Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Lien Release</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Based_Service_Coverage__c</fullName>
        <label>State-Based Service Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vendors_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Services</label>
    <nameField>
        <label>Vendor Services</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>